2010-04-10  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* xfns.c (Fx_show_tip): Undo last change.

2010-04-09  Jan Djärv  <jan.h.d@swipnet.se>

	* xfns.c (Fx_show_tip): Call try_window in a loop until
	fonts_changed_p is zero (Bug#2423).

2010-11-04  Jan Djärv  <jan.h.d@swipnet.se>

	* xfns.c (x_real_positions): Only use _NET_FRAME_EXTENTS if our
	parent is the root window.  Check this after traversing window tree.

	* xterm.c (x_term_init): Initialize Xatom_net_frame_extents.

	* xterm.h (struct x_display_info): Xatom_net_frame_extents is new.

	* xfns.c (x_real_positions): Try to get _NET_FRAME_EXTENTS first
	before traversing window tree (Bug#5721).

2010-11-03  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (CRT_DIR): New variable, set by configure.
	* m/amdx86-64.h, m/ibms390x.h (START_FILES, LIB_STANDARD):
	Use $CRT_DIR rather than HAVE_LIB64_DIR.  (Bug#5655)

2010-11-01  Jan Djärv  <jan.h.d@swipnet.se>

	* process.c (kbd_is_on_hold): New variable.
	(hold_keyboard_input, unhold_keyboard_input, kbd_on_hold_p):
	New functions.
	(wait_reading_process_output): If kbd_on_hold_p returns non-zero,
	select on empty input mask.
	(init_process): Initialize kbd_is_on_hold to 0.

	* process.h (hold_keyboard_input, unhold_keyboard_input)
	(kbd_on_hold_p): Declare.

	* keyboard.c (input_available_signal): Declare.
	(kbd_buffer_nr_stored): New function.
	(kbd_buffer_store_event_hold): If kbd_buffer_nr_stored returns
	more than KBD_BUFFER_SIZE/2, stop reding input (Bug#6571).
	(kbd_buffer_get_event): If input is suspended and kbd_buffer_nr_stored
	returns less than KBD_BUFFER_SIZE/4, resume reding input (Bug#6571).
	(tty_read_avail_input): If input is on hold, return.
	Don't read more that free slots in kbd_buffer (Bug#6571).

2010-10-31  Chong Yidong  <cyd@stupidchicken.com>

	* xterm.c (x_connection_closed): Print informative error message
	when aborting on GTK.  This requires using shut_down_emacs
	directly instead of Fkill_emacs.
